--- a/slides.Rmd
+++ b/slides.Rmd
@@ -13,51 +13,27 @@ output:
 # Load packages required
 library(knitr)
 library(magrittr)
-library(kableExtra)
 
 knitr::opts_chunk$set(echo = FALSE)
-
-# Create data frame for table
-table_contents <- data.frame(c("Text", "Text",
-                               "Text", "Text",
-                               "Text"),
-                             c(1:5))
 ```
 
-## Slide title
 
-- Bullet point
-- Bullet point with *italic text*
-- Bullet point with **bold text**
+## What is unit testing?
 
-## Slide title
+- Unit testing involves testing code to ensure it does what it's supposed to do
 
-```{r out.width = "70%", fig.align = 'center'}
-include_graphics("images/value.png")
+- It is an important concept in software development
+
+- In the context of R, unit testing normally involves testing whether the output of functions are as expected
+
+- If you've never heard of unit testing, but do write R functions, chances are you already do informal unit testing
+
+
+## Why do unit testing?
+
+```{r out.width = "85%", fig.align = 'center'}
+include_graphics(here::here("images", "pill-test.jpg"))
 ```
 
-## This slide has two columns 
-<!-- It seems easier to do with htmltags than with other ways --> 
-<div style="float: left; width: 50%; text-align: left">
-* Bullet point
-* Bullet point with *italic text*
-* Bullet point with **bold text**
-</div>
 
-<div style="float: right; width: 50%;">
-```{r out.width = "100%", fig.align = 'right'}
-hist(rnorm(100))
-```
-</div>
-
-## Slide title
-
-[ISD homepage](http://www.isdscotland.org/)
-
-## Slide title
-
-```{r, echo = FALSE}
-    kable(table_contents,
-          col.names = c("Column heading", "Column heading"),
-          format = "markdown")
-```
+## Why do unit testing?
