--- a/slides.Rmd
+++ b/slides.Rmd
@@ -63,7 +63,7 @@ include_graphics(here::here("images", "testthat_logo.png"))
 
 ## The testthat package
 
-- The most prominent functions in testthat are the `expect_` functions:
+The most prominent functions in testthat are the `expect_` functions:
 
 ```{r}
 expect_equal(2 + 3, 5)
@@ -74,4 +74,53 @@ If these tests are run individually and pass, they return no output. They return
 
 ```{r, error = TRUE}
 expect_lt(3, 2)
+```
+
+
+## A practical example
+
+Imagine you want to calculate the number of instances of a particular day in a set time period (motivation: the HSMR publication goes out on the third last Tuesday of the month, every three months). You could do it 'manually' every time:
+
+```{r, message = FALSE}
+library(lubridate)
+
+# Number of Tuesdays in January 2018
+sum(format(seq(dmy(01012018), dmy(31012018), by = "day"), "%w") == 2)
+
+# Number of Thursdays in 2020
+sum(format(seq(dmy(01012020), dmy(31122020), by = "day"), "%w") == 4)
+```
+
+
+## A practical example
+
+If you have to do this lots of times, for different time periods, it's easier, safer and all-round better to write a function:
+
+```{r}
+n_day <- function(start, end, n) {
+  
+  if (any(class(c(start, end)) != "Date")) {
+    stop("The start and end dates must be in date format")
+  }
+  
+  # Note that Sunday is considered to be day 0; not day 7
+  if (!n %in% 0:6) {
+    stop("The day of the week must be a number between 0 and 6")
+  }
+  
+  sum(format(seq(start, end, by = "day"), "%w") == n)
+}
+```
+
+
+## A practical example
+
+You can then call that function:
+
+```{r}
+# Number of Tuesdays in January 2018
+n_day(dmy(01012018), dmy(31012018), 2)
+
+# Number of Thursdays in 2020
+n_day(dmy(01012020), dmy(31122020), 4)
 ```
