--- a/slides.Rmd
+++ b/slides.Rmd
@@ -40,9 +40,14 @@ knitr::knit_hooks$set(error = function(x, options) {
 
 ## Why do unit testing?
 
-```{r echo = FALSE, out.width = "85%", fig.align = 'center'}
+```{r echo = FALSE, out.width = "75%", fig.align = 'center'}
 include_graphics(here::here("images", "pill-test.jpg"))
 ```
+<center>
+
+Source: [Cathy Wilcox](https://twitter.com/cathywilcox1/status/1072957848462614528)
+
+</center>
 
 
 ## Why do unit testing?
